# SWYAKL_Example

./: .gitignore  .gitmodules  CMakeLists.txt  README  auto-test-stencil-allshare.sh  auto-test-stencil-static.sh  auto-test-stencil.sh  buildCPU.sh  buildCUDA.sh  buildSW-allshare.sh  buildSW-static.sh  buildSW.sh  core  extract_time.py  extract_time.sh
cmake/toolchains/: sw64.cmake  sw64mpi.cmake
simple_examples/cpp/: CMakeLists.txt  main.cpp
simple_examples/cpp_yakl/: CMakeLists.txt  README  main.cpp
simple_examples/cpp_yakl_2/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  sw_helper.h
src/3dmul/: CMakeLists.txt  main.cpp
src/CPP/: CMakeLists.txt  cpe_adapter.cpp  main.cpp  sw_helper.h
src/Call_From_Fortran/: CMakeLists.txt  fortran_module.f90  main.cpp
src/Fortran/: CMakeLists.txt  cpp_interface.cpp  main.f90
src/deep_copy_to/: CMakeLists.txt  main.cpp
src/load_unbalance/: CMakeLists.txt  draw_rand_dist.py  main.cpp
src/mul/: CMakeLists.txt  main.cpp
src/simd_test/: CMakeLists.txt  main.cpp
src/stencil/: CMakeLists.txt  main.cpp
src/stencil_l/: CMakeLists.txt  main.cpp
src/stencil_l_gpu/: main.cpp
src/sw_stack_depth/: CMakeLists.txt  main.cpp
tools/: bsub-allshare.sh  bsub.sh  swucwrapper  swucxxwrapper
