add_subdirectory(mul)
add_subdirectory(Fortran)
# add_subdirectory(stencil)
add_subdirectory(3dmul)
add_subdirectory(simd_test)
if ("${YAKL_ARCH}" STREQUAL "CUDA")
  add_subdirectory(stencil_l_gpu)
else()
  add_subdirectory(stencil_l)
endif()
add_subdirectory(deep_copy_to)
# add_subdirectory(Call_From_Fortran)
add_subdirectory(sw_stack_depth)
add_subdirectory(load_unbalance)